# additive-fft

./: .gitignore  .gitmodules  README.md
C/: Makefile  README.md  main  main.c
C++/: CMakeLists.txt  benchmark.cpp  benchmark_plot.py  main.cpp  normalize_percentages.py
C++/Cantor/: cantor_basis.hpp  cantor_basis.tcc  div_by_s_i.hpp  fft.hpp  fft.tcc  fft_hc.tcc
C++/Gao/: fft.tcc
C++/LCH/: fft.hpp  fft.tcc  utils.tcc
C++/libiop/: fft.hpp  fft.tcc
C++/utils/: utils.hpp  utils.tcc
C/cantor/: cantor_fft.c  cantor_fft.h  div_by_s_i.h
C/utils/: lch_api.c  lch_api.h  utils.h
Cantor/: fft.sage  test.sage
Cantor/sage/: fft.sage  test.sage
Gao/sage/: fft.sage  test.sage
Sage/Cantor/: fft.sage  test.sage
Sage/Gao/: fft.sage  taylor.sage  test.sage
Sage/utils/: utils.sage
data_backup/: BM_cantor_additive_fft.csv  BM_cantor_additive_fft_precmp.csv  BM_gao_additive_fft_co.csv  BM_gao_additive_fft_co_lvl2.csv  BM_gao_additive_fft_lvl1.csv  BM_gao_additive_fft_lvl2.csv  BM_libiop_additive_fft.csv
data_backup/Oct14/: nohup.out
data_backup/Oct7/: benchmark_output.json
data_backup/chrono_timer/: chrono_output.csv  chrono_output_nanosec.csv  normalized_chrono_output.csv
sage/: taylor.sage  test.sage
